@@ -5,15 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -44,14 +40,11 @@ global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -63,42 +56,23 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
@@ -107,7 +81,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "YM6drTY9nBqY8sFxlK2noNxt6D9I0XqBaROAYH1IGo8dBAYr5S3V1TU2t2k8Im/WwV6bwy6LJnwFElDuLdbpEyN+oDCEXC6qBmxvnsA9P7yFM29s4O7Lyh2knsIJmgjq/6njLO2npYPLpvP2IKw8r0LQQo+EgewNmtS1S6dSYU5FtPFSMv4Yt5df41xTWlt4XqrKW9YR3SbauZgGDUy8LA34LZ1A5Jtx2x7uctnvUIvPn8Tt7d/lQnGQpFwJuS+m3x9+gz+y3VAEhsP/gIWjFWWUI6I8AD9T+ZtU/TaHuM1tFcb13y8V/jzm7G8qtZjIpLUMpYDyczLexZgi50RK8tg+5SZ5M6iFy2+Lu6mXzWjzegZoprFeazhurN+E7yyh33EGl2okLeYeXwPFNtwMDYcjC8IcUQf3USbDM9EsZOzvmXzPvTH6x6YS0oBOhoMOPH8nSR0hoPiGClBrwdSaWa5VTE4/jALaaCQG4lGzhf3GPlK+XiwPR//lDr2b72IszaHtzt9+JCYzCaUiXafXnNw1KNffKjDKS7wPXhlwDtcwQXxWzd7teHA+KdLIoCZV5RlxT0MfDDKZXuPQ/5IKPwpAGYrLCrvwN+MS3/rQJfIzOuvDP9JtDqdspHHqdbeqvYm/muGU/9r9XTCIAUO7d9LP3RHWQ09lMY4jXJPGRYM="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -115,7 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "tNCUBg6B/j7xoRBL1WPd3r7hC+wWd8m9Qra2f7YClyn9kDRkbmeKUB6gaaNb7okIWSNn1BclQr8RNN35648dIwVToiOoST3KkKBRnEE4as4N5BcKGXMHcF8oNfd6munAn7DbQrYRJ1hVNHmqnBr18zv/s37GMoT3yZ6WYh71exkAJnIZRGSgWOYlWGrPvBwZlOj8JpySEvVsR3D11x6Mjo+P7LKj1LW+qxV+NFsp2vsrDqaEgSjg1KIlxCkq8GIwKRgm+45vgr1VZCbWtXOJx9BptJTg4n4LPlGfaqXacjA1m0cAHpFOSJ4z3YTP0LsxA9Rko04ahKZ0YizkynFJR4DfLhApUOrYFe5uu8Is9epXIJxECLZ7C8Qeyq0OTn/sNTMYTsIen9TlKA+RbRNxVkrkBGhR8pIcPpQusqDH5QIwRL42v7bwi6bqXX/iuEVCumA3KVZoT1y7ZlEaY8YEENKV3GH9PpC6XKGVfa1y5jFzi0UH3PH8FF2EuA89mYBfOVgcKZ5f38q39/2N2F8NRYX8yYCFTTGiVi84VhhNNRFT+ddzPVc5y8ShVjXZCFWN/QNAczkBeHoqXuJA2yr84hf4SoulEsGxCegsj1WpcwiOgwJZz0YwP5MYJDDZMn7yAp76pcyxzYGn5eTabY/7auaq8TniNQyh1zRLg0Wz71I="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
