@@ -1,6 +1,6 @@
 {
   "name": "simp-libreswan",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "author": "SIMP Team",
   "summary": "Manages IPSec VPN Tunnels",
   "license": "Apache-2.0",
